# mltrade

./: .dockerignore  .env.example  .gitignore  Dockerfile  MVP_PROGRESS.md  README.md  compose.yaml  pyproject.toml
data/: operations.db
data/daily_bars/fixture-2026-06-12/: daily-bars.parquet  manifest.json
data/snapshots/real/: daily_bars_2026-06-13.manifest.json  daily_bars_2026-06-13.parquet  trials_2026-06-13.manifest.json  trials_2026-06-13.parquet
docs/runbooks/: paper-trading-mvp.md  research-experiments.md
docs/superpowers/plans/: 2026-06-12-trading-platform-foundation.md  2026-06-13-end-to-end-paper-trading-mvp.md  2026-06-14-local-research-experiment-platform.md
docs/superpowers/specs/: 2026-06-12-us-equities-ml-trading-platform-design.md  2026-06-13-end-to-end-paper-trading-mvp-design.md  2026-06-14-local-research-experiment-platform-design.md  2026-06-15-completion-and-improvement-plan.md  2026-06-16-institutional-grade-upgrade.md
experiments/: ridge-balanced-search.toml  ridge-baseline.toml
scripts/: compute_trials.py  fetch_real_snapshot.py
src/mltrade/: calendar.py  cli.py  config.py  export.py  universe.py
src/mltrade/analytics/: __init__.py  attribution.py  benchmark.py  overfitting.py  performance.py  returns.py
src/mltrade/backtest/: __init__.py  accounting.py  engine.py  reporting.py
src/mltrade/data/: __init__.py  alpaca.py  bars.py  fixtures.py  publication.py  quality.py  snapshot.py
src/mltrade/domain/: instruments.py  time.py
src/mltrade/execution/: __init__.py  alpaca.py  broker.py  intents.py  reconciliation.py  service.py  simulated.py
src/mltrade/experiments/: __init__.py  examples.py  (+11 more)
tests/: conftest.py
tests/contract/: test_alpaca_paper.py  test_postgres_audit.py  test_postgres_mvp_state.py
tests/integration/: test_cli_mvp.py  test_demo_workflow.py  test_doctor.py  test_execution_service.py  test_experiment_acceptance.py  test_experiment_cli.py  test_experiment_runner.py  test_export.py  test_paper_workflow.py  test_repository_hygiene.py  test_research_workflow.py  test_walk_forward_backtest.py
tests/unit/: test_alpaca_broker_adapter.py  test_alpaca_data_adapter.py  test_analytics_attribution.py  test_analytics_benchmark.py  test_analytics_overfitting.py  test_analytics_performance.py  test_analytics_returns.py  test_audit.py  test_backtest_accounting.py  test_backtest_reporting.py  test_bars.py  test_calendar.py  test_config.py  test_data_fixtures.py  test_data_publication.py  test_data_quality.py  test_database.py  test_execution_intents.py  test_experiment_comparison.py  test_experiment_loading.py  test_experiment_provenance.py  test_experiment_records.py  test_experiment_reporting.py  test_experiment_search.py  test_experiment_specs.py  test_experiment_storage.py  test_experiment_tracking.py  test_experiment_tuning.py  test_feature_leakage.py  test_features.py  test_instruments.py  test_logging.py  test_operational_repositories.py  test_package.py  test_portfolio_optimizer.py  test_reconciliation.py  test_risk_policy.py  test_simulated_broker.py  test_snapshot_source.py  test_snapshots.py  (+3 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  format.ts  index.css  palette.ts  types.ts  useDashboard.ts
(+55 files in other folders)
