[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mltrade"
version = "0.1.0"
description = "Research, risk, and execution platform for systematic US equities trading"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "cvxpy>=1.6",
  "duckdb>=1.2",
  "exchange-calendars>=4.8",
  "httpx>=0.28",
  "mlflow>=3.1,<4",
  "numpy>=2.2",
  "optuna>=4.4,<5",
  "pandas>=2.2",
  "polars>=1.26",
  "psycopg[binary]>=3.2",
  "pyarrow>=19.0",
  "pydantic>=2.11",
  "pydantic-settings>=2.14.2",
  "scikit-learn>=1.6",
  "scipy>=1.13",
  "sqlalchemy>=2.0",
  "structlog>=25.1",
  "typer>=0.15",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "respx>=0.22",
  "ruff>=0.11",
]

[project.scripts]
mltrade = "mltrade.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mltrade"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "contract: requires an external service such as PostgreSQL",
  "alpaca: requires explicit Alpaca paper credentials and network access",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# Typer reads CLI parameter metadata from call defaults; this is the framework
# idiom, not the B008 mutable-default footgun.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["mltrade"]

[tool.coverage.run]
branch = true
source = ["mltrade"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
